Inserire nel dom stampa lunghezza della nuova stringa generata, correzione stile

--- a/style.css
+++ b/style.css
@@ -16,6 +16,11 @@ h1 {
     padding: 1.5rem 0;
 }
 
+h2 {
+    margin: 0 1rem;
+    padding: .5rem 0;
+}
+
 h3 {
     margin: 0 1rem;
     padding: 1rem 0;
